exports[`test renders Layout by default 1`] = `<Layout submit={[Function]} save={[Function]} state={{...}} />`;

exports[`test renders error when error 1`] = `
<div className="fixed-ends fixed-sides">
<Err msg="Looks like there was a problem" error="test error" />
</div>
`;

exports[`test renders loading when loading 1`] = `
<div className="fixed-ends fixed-sides">
<Loading msg="Updating your password..." />
</div>
`;

exports[`test renders success when success 1`] = `
<div className="fixed-ends fixed-sides">
<Success msg="Your password has been updated!" />
</div>
`;
